add missing img url

--- a/index.html
+++ b/index.html
@@ -10727,7 +10727,7 @@
                <div class="text">Chat</div>
             </div>
             <div class="icon-wrapper">
-               <img class="icon" src="">
+               <img class="icon" src="https://cdn.yellowmessenger.com/D2JJ8bFhXYfQ1679893568169.jpg">
                <i class="ri-checkbox-blank-circle-fill warning hide" aria-hidden="true"></i>
             </div>
             <div class="title-parent">
