add missing header text

--- a/index.html
+++ b/index.html
@@ -10731,10 +10731,10 @@
                <i class="ri-checkbox-blank-circle-fill warning hide" aria-hidden="true"></i>
             </div>
             <div class="title-parent">
-               <div id="chat-title" class="title">Chat with us</div>
-               <div class="loading title hide"></div>
-               <div class="loading sub-title hide"></div>
-               <div class="sub-title"></div>
+              <div id="chat-title" class="title">SUNNY</div>
+              <div class="loading title hide">SUNNY</div>
+              <div class="loading sub-title hide"></div>
+              <div class="sub-title">Your Travel Assistant</div>
             </div>
             <div class="actions"></div>
             <div id="agentsThumbsUpDown" style="display: none;">
